add final project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,36 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/scripts.js"></script>
-
 </head>
+
+
 <body>
     <div class="container">
+        <h1 id="wrap">JSTAR</h1>
         <h1>Grocery List</h1>
         <div class="input-group">
-            <input type="text" id="grocery-input" placeholder="Add a new item">
-            
+            <input type="text" id="input" placeholder="Add a new item">
+
+            <input type="text" id="grocery" placeholder="Add a new item">
+
+            <input type="text" id="juwon" placeholder="Add a new item">
+
+            <input type="text" id="cold" placeholder="Add a new item">
+
+            <input type="text" id="box" placeholder="Add a new item">
+
+
             <button id="add-btn">Add</button>
         </div>
-        <ul id="grocery-list"></ul>
+        <p class="warn"></p>
+        <ul id="grocery-list">
+            <li>
+                
+            </li>
+        </ul>
+
     </div>
-  
+
 </body>
+
 </html>
